--- a/src/app/products/fertilizers/fertilizers.page.html
+++ b/src/app/products/fertilizers/fertilizers.page.html
@@ -6,41 +6,8 @@
 
 <ion-content>
   <ion-list>
-    <ion-item detail>
-      <ion-label>Fertilizer 1</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 2</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 3</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 4</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 5</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 6</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 7</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 8</ion-label>
-    </ion-item>s
-    <ion-item detail>
-      <ion-label>Fertilizer 9</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 10</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 11</ion-label>
-    </ion-item>
-    <ion-item detail>
-      <ion-label>Fertilizer 12</ion-label>
+    <ion-item *ngFor="let product of products" [routerLink]="['/product-details']" detail>
+      <ion-label>{{ product.name}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
