categories icons added

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,8 +19,11 @@
   </ion-button>
   <ion-button shape="round" color="secondary">Secondary</ion-button>
   <ion-button shape="round" color="tertiary">Tertiary</ion-button> -->
-  <ion-list>
+  <ion-list class="bg">
     <ion-item *ngFor="let category of categories" [routerLink]="['/products']" detail>
+      <ion-avatar slot="start">
+        <img [src]="category.icon">
+      </ion-avatar>
       <ion-label>{{ category.name }}</ion-label>
     </ion-item>
   </ion-list>
