android project generated, refactored main screen

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,3 @@
 .bg {
-    background-image: url('../../assets/icon/pesticides-1.png');
-    height: 100%;
+    background-image: url('../../assets/icon/farmer.jpg');
 }
