--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,27 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.black-text {
+    color: black;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.full-width {
+    width: 100%;
+}
+
+.height-2em {
+    height: 2em;
+}
+
+.height-3em {
+    height: 3em;
+}
