--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,12 +19,38 @@
   </ion-button>
   <ion-button shape="round" color="secondary">Secondary</ion-button>
   <ion-button shape="round" color="tertiary">Tertiary</ion-button> -->
-  <ion-list class="bg">
+  <ion-card class="bg">
+    <!-- <img src="" /> -->
+    <ion-card-header>
+      <ion-card-subtitle>Your own</ion-card-subtitle>
+      <ion-card-title>Farmer's Bay</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <ion-text class="black-text">Keep close to Nature's heart... and break clear away, once in awhile,
+      and climb a mountain or spend a week in the woods. Wash your spirit clean.</ion-text>
+    </ion-card-content>
+  </ion-card>
+  <!-- <ion-list>
     <ion-item *ngFor="let category of categories" [routerLink]="['/products']" detail>
       <ion-avatar slot="start">
         <img [src]="category.icon">
       </ion-avatar>
       <ion-label>{{ category.name }}</ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
+
+  <div class="ion-margin height-2em"></div>
+
+  <div class="full-width ion-margin-top">
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin">
+      <ion-avatar slot="start">
+        <img src="../../assets/icon/fertilizers-1.png">
+      </ion-avatar>
+      Fertilizers
+    </ion-button>
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Pesticides</ion-button>
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Seeds</ion-button>
+  </div>
+
 </ion-content>
