product details page enhanced, list view update

--- a/src/app/products/products-list/products-list.page.html
+++ b/src/app/products/products-list/products-list.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding class="bg-color">
   <ion-list>
     <ion-item *ngFor="let product of products" [routerLink]="['/product-details']" detail>
       <ion-label>{{ product.name}}</ion-label>
