--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,10 +25,10 @@
       <ion-card-subtitle>Your own</ion-card-subtitle>
       <ion-card-title>Farmer's Bay</ion-card-title>
     </ion-card-header>
-  
+
     <ion-card-content>
       <ion-text class="black-text">Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.</ion-text>
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.</ion-text>
     </ion-card-content>
   </ion-card>
   <!-- <ion-list>
@@ -43,14 +43,29 @@
   <div class="ion-margin height-2em"></div>
 
   <div class="full-width ion-margin-top">
-    <ion-button size="large" expand="block" fill="outline" class="ion-margin">
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin" *ngFor="let category of categories"
+      [routerLink]="['/products']" detail>
       <ion-avatar slot="start">
         <img src="../../assets/icon/fertilizers-1.png">
-      </ion-avatar>
-      Fertilizers
+      </ion-avatar> Fertilizers
     </ion-button>
-    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Pesticides</ion-button>
-    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Seeds</ion-button>
+
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin" *ngFor="let category of categories"
+      [routerLink]="['/products']" detail>
+      <ion-avatar slot="start">
+        <img src="../../assets/icon/pesticides-1.png">
+      </ion-avatar> Pesticides
+    </ion-button>
+
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin" *ngFor="let category of categories"
+      [routerLink]="['/products']" detail>
+      <ion-avatar slot="start">
+        <img src="../../assets/icon/seeds-1.png">
+      </ion-avatar>Seeds
+    </ion-button>
+
+
+
   </div>
 
 </ion-content>
