categories button css classes added

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -40,17 +40,21 @@
     </ion-item>
   </ion-list> -->
 
-  <div class="ion-margin height-2em"></div>
+  <div class="ion-margin height-1em"></div>
 
-  <div class="full-width ion-margin-top">
+  <div class="full-width ion-margin-top ion-padding">
     <ion-button size="large" expand="block" fill="outline" class="ion-margin">
-      <ion-avatar slot="start">
-        <img src="../../assets/icon/fertilizers-1.png">
-      </ion-avatar>
-      Fertilizers
+      <div class="width-15">
+        <ion-avatar slot="start">
+          <img src="../../assets/icon/fertilizers-1.png">
+        </ion-avatar>
+      </div>
+      <div class="width-85">
+        Fertilizers
+      </div>
     </ion-button>
-    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Pesticides</ion-button>
-    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Seeds</ion-button>
+    <!-- <ion-button size="large" expand="block" fill="outline" class="ion-margin">Pesticides</ion-button>
+    <ion-button size="large" expand="block" fill="outline" class="ion-margin">Seeds</ion-button> -->
   </div>
 
 </ion-content>
