--- a/src/global.scss
+++ b/src/global.scss
@@ -41,10 +41,46 @@
     width: 100%;
 }
 
+.height-1em {
+    height: 1em;
+}
+
 .height-2em {
     height: 2em;
 }
 
 .height-3em {
     height: 3em;
+}
+
+.width-30 {
+    width: 30%;
+}
+
+.width-70 {
+    width: 70%;
+}
+
+.width-25 {
+    width: 25%;
+}
+
+.width-75 {
+    width: 75%;
+}
+
+.width-20 {
+    width: 20%;
+}
+
+.width-80 {
+    width: 80%;
+}
+
+.width-15 {
+    width: 15%;
+}
+
+.width-85 {
+    width: 85%;
 }
